Work/ITclub/1/backup/v0.1.0/RULE.md
# 项目设计规范与约束

> 本文档定义了项目的核心设计要求、视觉规范与技术约束，确保整体体验的一致性与专业性。

## 一、视觉设计规范

### 1.1 设计哲学

**核心理念**：科技美学与教学功能的融合
- 营造沉浸式的算法学习氛围
- 通过视觉层次引导学习流程
- 平衡专业性与易用性

### 1.2 色彩系统

**主色调**：科技蓝渐变
- 主色：`#2962ff` - 专业、可信
- 深色：`#1e4de7` - 强调与深度
- 浅色：`#5c9dff` - 高亮与聚焦

**功能色彩**：
- 成功色：`#00c853` - 正向反馈
- 警示色：`#ffab00` - 注意事项
- 错误色：`#ff5252` - 问题标识

**文本层级**：
- 主文本：`#ffffff` - 主要内容
- 次文本：`#e0e7ff` - 辅助信息
- 弱文本：`#b8c2ff` - 说明文字
- 高亮：`#5c9dff` - 关键词强调

### 1.3 毛玻璃效果规范

**材质定义**：
```css
--glass-bg: rgba(255, 255, 255, 0.08);           /* 基础透明度 */
--glass-border: 1px solid rgba(255, 255, 255, 0.1); /* 边框透明度 */
--glass-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);  /* 悬浮阴影 */
--glass-blur: blur(12px);                       /* 高斯模糊强度 */
```

**应用场景**：
- 所有卡片式内容容器（问题卡、算法步骤、人物介绍等）
- 导航栏与工具栏背景
- 模态对话框与浮动面板
- 可视化控制区域

**实现要求**：
- 必须配合 `backdrop-filter` 使用
- 层级间透明度需有差异（0.08、0.06、0.04）
- 边框需使用半透明描边强化边缘

### 1.4 卡片化设计

**卡片结构**：
- **容器**：应用毛玻璃效果，圆角 `10px-14px`
- **边距**：卡片间间距 `20px-24px`
- **内边距**：内容区域 `16px-24px`
- **边框**：左侧强调边（如错误卡片左侧红色边）

**阴影系统**：
```css
--shadow-light: 0 4px 20px rgba(41, 98, 255, 0.15);
--shadow-medium: 0 8px 32px rgba(41, 98, 255, 0.25);
--shadow-heavy: 0 12px 48px rgba(41, 98, 255, 0.35);
```

**悬浮感营造**：
- 阴影从卡片底部投射
- 阴影颜色使用主题色（蓝色）而非纯黑
- 不同层级使用不同阴影强度

### 1.5 排版规范

**字体系统**：
- 主字体：`Segoe UI`, `Tahoma`, `Geneva`, `Verdana`, sans-serif
- 等宽字体：`Courier New`, `Courier`, monospace（用于公式）
- 基础字号：`14px`（针对16:9屏幕优化）

**标题层级**：
- H1（模块标题）：`2.2rem`，主色
- H2（章节标题）：`1.8rem`，强调色
- H3（小节标题）：`1.6rem`，辅色
- H4（卡片标题）：`1.3rem`

**行高与间距**：
- 正文行高：`1.6`
- 标题行高：`1.3-1.4`
- 段落间距：`16px-20px`

## 二、布局与尺寸约束

### 2.1 屏幕比例与适配

**强制要求**：16:9 宽高比
- 设计基准分辨率：`1920×1080`
- 最小支持宽度：`1366px`
- 全屏模式，无横向滚动
- 纵向内容溢出处理：隐藏而非滚动

**容器策略**：
```cssnhtml, body {
  overflow: hidden;  /* 严格禁止滚动 */
  height: 100%;      /* 全屏高度 */
}
```

### 2.2 内容区域划分

**顶部导航区**：
- 高度：`80px`
- 固定定位，始终可见
- 包含：品牌标识、模块导航、进度指示、控制按钮

**主内容区**：
- 高度：`calc(100vh - 80px)`
- 采用模块切换机制（非滚动）
- 每个模块内部可使用页签切换子内容

**侧边导航**：
- 右侧垂直页签导航
- 宽度：`60px`
- 用于模块内的页面切换

### 2.3 响应式约束

**严格限制**：
- 不支持移动端适配（专注桌面演示场景）
- 最小宽度锁定为 `1366px`
- 高度固定为 `768px`（兼容720p投影）
- 内容溢出策略：
  - 水平溢出：隐藏
  - 垂直溢出：隐藏（非滚动）
  - 必要时使用内部滚动（如代码块）

## 三、交互设计规范

### 3.1 导航交互

**模块切换**：
- 顶部导航栏点击切换
- 键盘方向键支持（← →）
- 平滑过渡动画（300ms ease）

**页面切换**：
- 右侧页签按钮
- 垂直方向键支持（↑ ↓）
- 上下页控制按钮

**进度反馈**：
- 顶部进度条实时更新
- 当前模块/总模块数显示
- 页签指示器（圆点状态）

### 3.2 可视化交互

**Canvas区域**：
- 悬停时显示工具提示
- 参数滑块实时响应（≤100ms延迟）
- 重新生成按钮带动画反馈

**控制元素**：
- 按钮：悬停上浮 `2px`，阴影加深
- 滑块：拖拽时显示数值标签
- 下拉菜单：毛玻璃下拉列表

### 3.3 动画规范

**过渡时长**：
- 快速：`0.2s`（悬停效果）
- 标准：`0.3s`（页面切换）
- 缓慢：`0.5s`（模块切换）

**缓动函数**：
- 标准：`ease`（默认）
- 进入：`cubic-bezier(0.4, 0, 0.2, 1)`（模块切换）
- 退出：`cubic-bezier(0.0, 0, 0.2, 1)`（弹窗关闭）

## 四、视觉问题排查规范

### 4.1 视觉效果问题排查原则

**核心理念**：不要局限于单一效果，全面考虑所有可能的视觉因素

**问题分析流程**：
1. **识别用户描述**：准确理解用户报告的视觉问题
2. **拓宽排查范围**：不要仅局限于用户提到的特定效果
3. **全面检查相关元素**：
   - 检查渐变覆盖层（::before / ::after 伪元素）
   - 检查背景色变化（hover 状态的 background 属性）
   - 检查阴影变化（box-shadow 的变化）
   - 检查边框变化（border-color 的变化）
   - 检查透明度变化（opacity 的变化）
   - 检查变换效果（transform 的变化）
4. **系统级排查**：确保不遗漏任何可能导致视觉异常的因素

**典型案例**：
- 用户报告"阴影错误" → 实际可能是背景色变化、渐变高亮、边框变化等
- 用户报告"高亮效果" → 可能是渐变层、背景色变化、边框高亮等多种效果的组合
- 用户报告"悬浮异常" → 需要检查所有 hover 相关的 CSS 属性变化

### 4.2 视觉问题修复最佳实践

**修复策略**：
1. **先理解后修复**：在动手修改前，先完整理解问题的所有表现
2. **拓宽排查范围**：不要局限于传统样式认知，考虑所有可能的视觉效果组合
   - 用户描述的"高亮"可能是渐变层、背景色、阴影、边框、位移等多种效果的组合
   - 用户描述的"阴影错误"可能是背景色变化、渐变覆盖、边框变化等其他效果导致
   - 必须全面检查所有 hover 相关的 CSS 属性，而非仅检查用户提到的效果
3. **多维度验证**：修改后检查是否影响其他相关效果
4. **作用域限定**：当需要仅修改特定模块时，使用 ID 选择器（如 #module-3）精确限定作用域
5. **保留其他效果**：确保只移除目标效果，保留其他正常的交互反馈

**修复检查清单**：
- [ ] 确认理解了用户描述的所有视觉问题
- [ ] 检查了所有可能导致该效果的 CSS 属性（不局限于用户提到的效果）
- [ ] 验证了修改不会影响其他模块
- [ ] 保留了正常的交互反馈（阴影、位移等）
- [ ] 在浏览器中实际验证了修复效果

### 4.3 文件修改异常处理规范

**触发场景**：
- 文件内容被意外删除大量内容
- 文件被意外添加大量内容
- 文件结构发生异常变化
- 其他非预期的文件修改

**处理流程**：
1. **立即停止**：发现异常后立即停止当前操作
2. **尝试撤销**：使用 IDE 的撤销功能（Ctrl+Z）恢复到异常前的状态
3. **记忆复原**：如果撤销不可用，根据记忆中的文件原始内容进行复原
4. **禁止直接恢复备份**：不要直接从备份文件夹恢复，因为备份版本可能与当前开发进度不同步
5. **验证复原**：复原后检查文件内容是否完整、正确

**重要原则**：
- ✅ 优先使用撤销操作恢复到异常前的状态
- ✅ 根据记忆复原时，应仔细核对关键代码段
- ❌ 禁止直接从备份恢复（除非万不得已）
- ❌ 不要依赖备份作为首选恢复手段

**预防措施**：
- 在进行大规模修改前，先读取并记录文件当前内容
- 使用小步修改策略，避免一次性修改大量内容
- 每次修改后立即验证效果

## 五、技术实现约束

### 4.1 浏览器支持

**必须支持**：
- `backdrop-filter`（毛玻璃核心）
- `CSS Grid` 和 `Flexbox`
- `Canvas 2D API`
- `ES6+` 语法

**降级策略**：
- 不支持 `backdrop-filter` 的浏览器显示纯色背景
- 使用 `@supports` 查询进行特性检测

### 4.2 性能要求

**渲染性能**：
- Canvas动画目标帧率：`60 FPS`
- 参数调节响应时间：`< 100ms`
- 模块切换时间：`< 300ms`

**资源优化**：
- 图片资源使用WebP格式（如需要）
- JavaScript代码分割（按模块加载）
- CSS关键路径优化（内联首屏样式）

### 4.3 代码规范

**文件组织**：
- HTML：语义化标签，模块化结构
- CSS：BEM命名规范，CSS变量驱动
- JavaScript：模块化架构，事件驱动

**命名约定**：
- 类名：`kebab-case`（如 `nav-btn`）
- ID：`camelCase`（如 `currentModule`）
- 变量：`camelCase`（如 `progressFill`）

### 4.4 日志记录规范

**强制要求**：所有代码修改必须记录到 `Log.log` 文件

**日志文件位置**：项目根目录 `/Log.log`

**日志格式标准**：
```
================================================================================
修改时间: YYYY-MM-DD HH:MM:SS (北京时间)
修改类型: [新增|修改|删除|优化]
修改文件: 完整的相对路径（如：index.html, css/components.css）
修改位置: 具体位置描述（如：模块2第一页 - 时间轴区域）
修改内容: 
  - 详细描述修改了哪些内容
  - 使用项目符号列出具体改动点
  - 如有参数调整，注明旧值和新值
  - 如有UI变更，描述变更前后的视觉效果
修改原因: 为什么要做这个修改（关联需求或问题）
相关任务: 任务ID或任务描述
验证状态: [未验证|已验证|部分验证]
验证结果: 验证的具体结果（如：时间轴显示正常，未超过屏幕高度）
修改人: WorkBuddy AI Assistant
================================================================================
```

**日志记录原则**：
- **只追加不删除**：所有历史记录永久保留
- **实时记录**：修改完成后立即写入日志
- **详细完整**：确保修改可追溯、可复现
- **任务关联**：每条日志必须关联到具体任务
- **验证必填**：记录修改后的验证结果

**日志写入示例**：
```
================================================================================
修改时间: 2025-03-15 14:30:25
修改类型: 修改
修改文件: css/components.css
修改位置: 模块2第一页 - 时间轴样式
修改内容: 
  - 将横向时间轴改为竖向时间轴设计
  - 添加左侧时间轴线（3px宽，渐变蓝色）
  - 时间标记显示在轴线左侧（absolute定位，left: -56px）
  - 事件卡片添加毛玻璃效果（glass-bg, backdrop-filter）
  - 每个事件项添加圆形标记（14px直径，主色填充）
  - 调整间距：padding-left: 60px，事件间距margin-bottom: 16px
  - 事件卡片最大宽度限制为220px，防止超出屏幕
修改原因: 用户反馈横向时间轴不够美观，要求改为竖向设计，时间轴靠近左侧，时间在轴上的点中，对应时间的右侧是对应事件
相关任务: 模块2第一页：将时间轴改为竖向设计
验证状态: 已验证
验证结果: 在1920x1080分辨率下测试，时间轴完整显示，所有事件卡片可见，未出现垂直滚动条，符合16:9比例要求
修改人: WorkBuddy AI Assistant
================================================================================
```

**自动化要求**：
- 每次调用 `replace_in_file` 或 `write_to_file` 后必须记录日志
- 日志写入使用 `write_to_file` 工具，设置 `append: true` 模式
- 修改人字段统一使用 "WorkBuddy AI Assistant"

## 五、内容呈现规范

### 5.1 代码展示

**公式与代码块**：
- 使用等宽字体
- 添加语法高亮（Prism.js）
- 背景色：`rgba(10, 13, 26, 0.5)`
- 内边距：`12px 16px`
- 圆角：`6px`

**行内代码**：
- 背景色：`rgba(92, 157, 255, 0.15)`
- 颜色：`#5c9dff`
- 内边距：`2px 6px`
- 圆角：`4px`

### 5.2 提示与说明

**信息提示**：
- 图标 + 文字组合
- 背景色根据类型变化（info/success/warning/danger）
- 使用毛玻璃效果

**工具提示**：
- 悬停时显示
- 位置：元素上方或右侧
- 样式：毛玻璃小卡片

## 六、禁止事项

### 严格禁止

❌ **布局相关**：
- 任何导致垂直滚动的设计
- 长条形内容布局
- 超过视口高度的内容堆叠
- 响应式断点导致的布局变化

❌ **视觉相关**：
- 纯色卡片背景（必须使用毛玻璃）
- 无阴影的扁平卡片
- 不透明边框
- 非品牌色系的颜色

❌ **交互相关**：
- 页面级滚动条
- 需要拖拽滚动条浏览内容
- 内容溢出无处理
- 无过渡的突兀切换

### 限制事项

⚠️ **谨慎使用**：
- 大段文字（建议配合可视化）
- 复杂表格（考虑图表化）
- 多层级嵌套菜单
- 第三方UI库组件

## 七、验收标准

### 视觉验收

✅ **毛玻璃效果检查**：
- 所有卡片均有半透明背景
- 模糊效果正常显示
- 层级透明度有差异
- 边框可见且半透明

✅ **阴影系统检查**：
- 每个卡片都有阴影
- 阴影颜色为蓝色系
- 阴影从底部投射
- 悬浮状态阴影加深

✅ **比例检查**：
- 在1920×1080下完美显示
- 在1366×768下无横向滚动
- 无垂直滚动条出现
- 内容完整可见

### 交互验收

✅ **导航检查**：
- 模块切换流畅
- 进度指示准确
- 键盘导航可用
- 无页面跳转

✅ **性能检查**：
- Canvas动画流畅
- 参数调节实时响应
- 无UI卡顿现象
- 内存泄漏检测

---

> **本规范是项目质量的基石，所有开发工作必须严格遵守。任何偏离需经项目负责人审批，并更新本文档。**

---

## 八、关键术语定义

### 8.1 核心概念

**模块 (Module)**
- **定义**：项目中独立的功能区块，每个模块聚焦一个特定的教学主题
- **特征**：
  - 拥有独立的标题和描述
  - 包含多个分页（页面）
  - 通过导航系统切换显示
  - 使用 `.module` CSS 类标识
- **示例**：
  - 模块 1：问题引入（Perlin Noise 的应用场景）
  - 模块 2：算法发明者（Ken Perlin 简介）
  - 模块 3：算法原理（柏林噪声的核心机制）
  - 模块 4：算法特性（连续性与平滑性）
  - 模块 5：实现步骤（逐步拆解算法）
  - 模块 6：应用案例（游戏开发、电影特效等）
  - 模块 7：互动实验（参数调节与实时预览）

**分页 (Page)**
- **定义**：模块内部的内容划分单元，用于组织相关的教学内容
- **特征**：
  - 属于特定模块
  - 通过圆点导航或按钮切换
  - 同一时间只显示一个分页
  - 使用 `.page` CSS 类标识
  - 支持淡入动画过渡
- **别称**：在特定语境下也称为"页面"
- **示例**：
  - 模块 1 第 1 页：问题背景
  - 模块 1 第 2 页：问题分析
  - 模块 1 第 3 页：解决方案

**页面 (Page/Screen)**
- **定义**：广义概念，可指：
  1. 模块内的分页（见"分页"定义）
  2. 整个浏览器视口显示的内容
- **语境区分**：
  - "切换到第 2 页" → 指模块内的分页
  - "整个页面布局" → 指浏览器视口

### 8.2 布局术语

**大标题栏 (Header Bar)**
- **定义**：页面顶部的固定导航栏，包含项目大标题、模块导航按钮和模块进度显示
- **组成结构**：
  - **大标题区域**：左侧显示项目名称（如"柏林噪声算法"）和图标
  - **模块导航区域**：中间显示所有模块的导航按钮（问题引入、肯·柏林、算法原理等）
  - **进度显示区域**：右侧显示当前模块进度和切换箭头
- **视觉特征**：
  - 毛玻璃效果背景（`backdrop-filter: blur(12px)`）
  - 底部自发光边缘（蓝色渐变，带脉冲动画）
  - 固定定位（`position: fixed`），始终可见
  - 高度：`var(--navbar-height)`（约 80px）
- **交互功能**：
  - 支持折叠/展开（通过折叠按钮控制）
  - 折叠时向上非线性平移，仅显示底部边缘
  - 折叠按钮显示 "^"（折叠）或 "v"（展开）图标
- **CSS 类名**：`.navbar`
- **代码注释标识**：`<!-- 大标题栏 (Header Bar) -->`

**16:9 适配**
- **定义**：界面设计严格遵循 16:9 宽高比，确保在标准分辨率下完美显示
- **技术要求**：
  - 基准分辨率：1920×1080
  - 最小支持宽度：1366px
  - 禁止出现垂直滚动条
  - 所有内容在视口内完整可见
- **实现方式**：
  - 使用 `overflow: hidden` 禁止滚动
  - 精确计算容器高度（`calc(100vh - navbar-height)`）
  - 小屏幕自动缩放（media query）

**无滚动设计**
- **定义**：整个应用不使用任何滚动条，所有内容通过导航切换展示
- **优势**：
  - 沉浸式学习体验
  - 内容组织更清晰
  - 避免信息过载
  - 符合演示场景需求

### 8.3 视觉术语

**毛玻璃效果 (Glassmorphism)**
- **定义**：模拟磨砂玻璃质感的视觉效果，通过半透明背景和模糊实现
- **技术实现**：
  ```css
  background: rgba(255, 255, 255, 0.04);
  backdrop-filter: blur(20px);
  border: 1px solid rgba(255, 255, 255, 0.08);
  box-shadow: 0 12px 40px rgba(41, 98, 255, 0.15);
  ```
- **应用场景**：所有卡片、导航栏、控制面板

**3D 上浮效果**
- **定义**：鼠标悬停时卡片产生的立体悬浮动画
- **技术实现**：
  ```css
  transform: translateY(-2px) scale3d(1.01, 1.01, 1.01);
  box-shadow: var(--shadow-heavy);
  ```
- **视觉效果**：
  - 卡片沿 Y 轴向上移动 2px（轻微偏移）
  - 轻微放大（1%）增强立体感
  - 阴影加深模拟悬浮高度
  - 配合半透明渐变覆盖层高亮（透明度 0.06）

**卡片悬浮效果详细规范**

**1. 触发条件**
- 鼠标指针进入卡片边界时立即触发
- 使用 `:hover` 伪类选择器
- 过渡时间：`0.3s ease`

**2. 分级悬浮机制（嵌套卡片）**
- **核心原则**：保证同一时间只有一个卡片处于悬浮状态
- **优先级规则**：最内层卡片优先
  - 当鼠标悬停在小卡片上时，仅小卡片悬浮
  - 外层大卡片保持静止（不悬浮、不上浮、阴影不变）
  - 确保视觉焦点集中在最内层卡片
- **技术实现**：
  ```css
  /* 子卡片独立悬浮 */
  .child-card {
    pointer-events: auto;
  }
  
  /* 父卡片检测子卡片悬停状态 */
  .parent-card:has(.child-card:hover) {
    transform: none !important;
    box-shadow: var(--shadow-light) !important;
  }
  
  .parent-card:has(.child-card:hover)::before {
    opacity: 0 !important;
  }
  ```
- **应用场景**：
  - 问题可视化卡片嵌套在问题卡片内
  - 特点总结卡片嵌套在算法原理卡片内
  - 任何父子卡片嵌套结构

**3. 悬浮效果参数**
- **位移**：`translateY(-2px)`（轻微向上 2px）
- **缩放**：`scale3d(1.01, 1.01, 1.01)`（放大 1%）
- **阴影**：从 `var(--shadow-light)` 变为 `var(--shadow-heavy)`
- **高亮层**：`::before` 伪元素，渐变透明度 0.06
- **3D 支持**：`transform-style: preserve-3d`

**4. 禁止行为**
- ❌ 禁止多层卡片同时悬浮
- ❌ 禁止外层卡片遮挡内层卡片的悬浮效果
- ❌ 禁止过大的位移（不超过 3px）
- ❌ 禁止过大的缩放（不超过 1.02）

**5. 特殊卡片处理**
- **步骤卡片中的数字圆圈**：
  - 垂直位置：在卡片高度方向完全居中
  - 水平位置：在卡片左侧文字区域的剩余空间居中
  - 文字布局：适当右移，为数字圆圈预留充足空间
  - 视觉效果：数字圆圈与文字清晰分离，互不干扰

**卡片化设计**
- **定义**：将内容组织在独立的视觉容器中，通过边框、阴影和毛玻璃效果形成清晰边界
- **结构要素**：
  - 容器：毛玻璃背景 + 边框 + 阴影
  - 圆角：10px-14px
  - 内边距：16px-24px
  - 左侧强调边：3px 宽，功能色

### 8.4 交互术语

**模块切换**
- **定义**：在不同功能模块之间转换显示
- **实现方式**：
  - 顶部导航栏按钮
  - 键盘左右箭头
  - 进度指示器点击
- **动画效果**：淡入淡出（0.5s）

**分页切换**
- **定义**：在同一模块内的不同分页之间转换
- **实现方式**：
  - 左侧圆点导航
  - 底部上下箭头按钮
  - 键盘上下箭头
- **动画效果**：淡入（0.3s）

**参数调节**
- **定义**：通过滑块或输入框调整算法参数，实时预览效果
- **支持参数**：
  - 平滑度（Smoothing）
  - 缩放（Zoom）
  - 偏移（Offset）
  - 种子（Seed）

### 8.5 技术术语

**柏林噪声 (Perlin Noise)**
- **定义**：由 Ken Perlin 发明的梯度噪声算法，用于生成自然纹理
- **核心特性**：
  - 伪随机但连续
  - 平滑过渡
  - 可控制尺度
  - 高维可扩展
- **应用领域**：
  - 游戏开发（地形生成）
  - 电影特效（自然现象模拟）
  - 程序设计（纹理合成）

**白噪声 (White Noise)**
- **定义**：完全随机的噪声，每个点独立生成
- **特点**：
  - 缺乏连续性
  - 像素化外观
  - 不适合模拟自然地景
- **对比**：作为柏林噪声的反面案例

**Simplex 噪声**
- **定义**：Ken Perlin 在 2002 年提出的改进算法
- **优势**：
  - 计算效率更高
  - 高维表现更好
  - 减少方向性伪影

---

> **术语使用规范**：
> 1. 在文档和代码中统一使用上述定义
> 2. 首次出现时提供简要说明
> 3. 避免混用"分页"和"页面"造成歧义
> 4. 新增术语应及时补充到本章节

---

## 九、版本备份管理规范

### 9.1 备份目录结构

**备份根目录**：`/backup/`

**版本文件夹命名规则**：
- 格式：`v<主版本号>.<次版本号>.<修订号>`
- 示例：`v0.0.1`, `v1.0.0`, `v1.2.3`
- 要求：纯英文，无空格，无特殊符号

**完整路径示例**：
```
a:\Work\
├── backup/              # 备份根目录
│   ├── v0.0.0/         # 初始版本（原始 Old 文件夹）
│   ├── v0.0.1/         # 首个正式版本
│   ├── v1.0.0/         #  major 版本备份
│   └── v1.1.0/         #  minor 版本备份
│   ├── v0.0.0.zip      # v0.0.0 的压缩文件
│   └── v0.0.1.zip      # v0.0.1 的压缩文件
├── css/
├── js/
├── ...
```

**说明**：
- `v0.0.0`：项目的初始版本（由原 `Old` 文件夹重命名而来）
- `v0.0.1`：首个正式优化版本
- 所有备份版本统一存放在 `backup/` 目录下
- 每个版本同时保留文件夹和 ZIP 压缩文件两种格式

### 9.2 备份触发条件

**必须备份的场景**：
1. ✅ 完成重大功能优化后
2. ✅ 界面布局大规模重构后
3. ✅ 修复严重 Bug 后
4. ✅ 准备发布新版本前
5. ✅ 进行高风险修改前

**建议备份的场景**：
- 完成一个完整的功能模块后
- 累计修改超过 10 个文件后
- 修改了核心架构代码后

### 9.3 备份操作流程

**步骤 1：创建版本文件夹**
```powershell
New-Item -Path "a:\Work\backup\vX.X.X" -ItemType Directory -Force
```

**步骤 2：复制项目文件**
```powershell
Get-ChildItem -Path "a:\Work" -Exclude "backup" | 
    Copy-Item -Destination "a:\Work\backup\vX.X.X" -Recurse -Force
```
- **注意**：排除 `backup` 文件夹，避免递归复制
- 如果存在 `Old` 文件夹（已重命名为 `v0.0.0`），也应当排除

**步骤 3：创建 ZIP 压缩文件**
```powershell
Compress-Archive -Path "a:\Work\backup\vX.X.X\*" -DestinationPath "a:\Work\backup\vX.X.X.zip" -Force
```
- 压缩范围：整个版本文件夹的所有内容
- 压缩格式：`.zip`
- 命名规则：与版本文件夹同名（如 `v0.0.1.zip`）
- 要求：完整保留文件夹结构和所有文件
- **重要**：压缩后**必须保留原始文件夹**，不得删除
  - ✅ 文件夹版本：便于直接查看、对比和快速恢复
  - ✅ ZIP 压缩文件：便于归档、传输和长期保存
  - ✅ 两者并存，互为备份，缺一不可

**步骤 4：验证备份完整性**
- 检查备份文件夹中是否包含所有核心文件
- 确认未包含其他版本备份
- 验证文件数量与源目录一致
- 确认 ZIP 压缩文件创建成功

**步骤 4：记录版本信息**
在 `Log.log` 中记录：
```
================================================================================
修改时间：2026-03-19 00:41:00
修改类型：版本备份
修改文件：全项目备份
修改位置：backup/v0.0.1/
修改内容：
  - 创建项目首个正式版本备份 v0.0.1
  - 备份范围：全部项目文件（排除 backup、Old 文件夹）
  - 备份位置：a:\Work\backup\v0.0.1\
  - 文件统计：CSS 文件 3 个，JS 文件 6 个，文档 6 个
版本特性：
  - 完成基础布局优化（标题栏位置、分页导航位置）
  - 实现卡片 3D 悬浮效果系统
  - 导航栏卡片式设计 + 自发光效果
  - 肯·柏林模块全面卡片化
修改原因：用户要求备份当前优化完成的版本
相关任务：版本备份 v0.0.1
验证状态：已验证
验证结果：
  - 备份文件夹创建成功
  - 所有核心文件已复制（15 个文件）
  - 未包含其他版本备份
  - 文件结构与源目录一致
修改人：WorkBuddy AI Assistant
================================================================================
```

### 9.4 版本号命名规范

**版本号格式**：`X.Y.Z`

**各部分含义**：
- **X (主版本号)**：重大架构变更或不兼容更新
  - 示例：重构整个导航系统
- **Y (次版本号)**：新功能添加，向下兼容
  - 示例：新增可视化模块
- **Z (修订号)**：Bug 修复和小优化
  - 示例：修复布局问题、优化样式

**版本号递增规则**：

**默认递增方式**：
- 在执行备份操作时，版本号默认采用增量更新机制，**仅递增最后一位数字（修订号 Z）**
- 递增逻辑：Z+1，自动处理进位
- 示例：
  - `0.0.0 → 0.0.1`（最后一位 +1）
  - `0.0.9 → 0.0.10`（最后一位 +1，自动进位）
  - `0.1.8 → 0.1.9`（最后一位 +1）
  - `0.9.9 → 0.9.10`（最后一位 +1，进位到十位）

**特殊递增方式**（需单独明确说明）：
- 重大重构：X+1, Y=0, Z=0
  - 示例：`0.9.5 → 1.0.0`（架构级变更）
- 新功能：Y+1, Z=0
  - 示例：`0.1.5 → 0.2.0`（添加新模块）
- 如遇特殊需求需调整其他位版本号时，将在单次备份操作中单独明确说明

**版本号命名原则**：
- 默认场景：小步快跑，频繁备份，仅递增修订号
- 特殊场景：明确指示，按需调整，递增主版本号或次版本号

**示例**：
- `v0.0.0` → 初始版本（原 `Old` 文件夹，历史版本）
- `v0.0.1` → 首个正式版本（首次优化完成）
- `v0.0.2` → 小优化（修复标题栏位置）
- `v0.0.10` → 第 10 次小优化（自动进位）
- `v0.1.0` → 新功能（新增互动实验模块，特殊指示）
- `v1.0.0` → 正式发布（完成所有 7 个模块，特殊指示）

**特殊版本说明**：
- `v0.0.0`：项目的"史前版本"，由原 `Old` 文件夹重命名而来
  - 存放位置：`a:\Work\backup\v0.0.0\`
  - 压缩文件：`a:\Work\backup\v0.0.0.zip`
  - 重要性：保留项目最初的设计和功能，具有历史价值

### 9.5 备份管理要求

**保留策略**：
- ✅ 保留所有 major 版本备份（v1.0.0, v2.0.0）
- ✅ 保留最近 3 个 minor 版本备份
- ✅ 保留最近 1 个修订版本备份
- ❌ 及时删除过期的测试版本

**空间管理**：
- 单个备份文件夹大小应 < 50MB
- 单个 ZIP 压缩文件应 < 10MB
- 总备份数量建议 < 20 个
- 定期清理无用备份

**文档同步**：
- 每次备份后更新本文档
- 在 `Log.log` 中记录版本信息
- 重要版本应创建发布说明

**压缩文件管理**：
- ⭐ **每个版本必须同时保留文件夹和 ZIP 两种格式**
- ⭐ **压缩后严禁删除原始文件夹**
- ✅ 文件夹版本：便于直接查看、对比和快速恢复
- ✅ ZIP 压缩文件：便于归档、传输和长期保存
- ✅ 两者并存，互为备份，缺一不可

### 10.6 恢复操作指南

**从备份恢复步骤**：

#### 方法一：从文件夹版本恢复

1. **确认目标版本**
   - 查看 `backup/` 目录中的版本列表
   - 确认需要恢复的版本号

2. **备份当前状态**（可选但推荐）
   ```powershell
   # 先备份当前状态到新版本
   Get-ChildItem -Path "a:\Work" -Exclude "backup" | 
       Copy-Item -Destination "a:\Work\backup\vX.X.X-current" -Recurse -Force
   ```

3. **复制备份文件回项目根目录**
   ```powershell
   Copy-Item -Path "a:\Work\backup\v0.0.1\*" -Destination "a:\Work\" -Recurse -Force
   ```

4. **验证恢复结果**
   - 在浏览器中打开项目
   - 检查所有功能是否正常
   - 确认版本号正确

#### 方法二：从 ZIP 压缩文件恢复

1. **解压备份文件**
   ```powershell
   Expand-Archive -Path "a:\Work\backup\v0.0.1.zip" -DestinationPath "a:\Work\backup\temp-restore" -Force
   ```

2. **备份当前状态**（可选但推荐）
   ```powershell
   Get-ChildItem -Path "a:\Work" -Exclude "backup" | 
       Copy-Item -Destination "a:\Work\backup\vX.X.X-current" -Recurse -Force
   ```

3. **复制解压的文件回项目根目录**
   ```powershell
   Copy-Item -Path "a:\Work\backup\temp-restore\*" -Destination "a:\Work\" -Recurse -Force
   ```

4. **清理临时文件夹**
   ```powershell
   Remove-Item -Path "a:\Work\backup\temp-restore" -Recurse -Force
   ```

5. **验证恢复结果**
   - 在浏览器中打开项目
   - 检查所有功能是否正常

**注意事项**：
- ⚠️ 恢复操作会覆盖当前文件，请谨慎操作
- ⚠️ 恢复前建议先备份当前状态
- ⚠️ 确保服务器已停止，避免文件占用
- ⭐ **压缩备份时必须保留原始文件夹，严禁删除**

**重要提醒**：
> 📌 **文件夹版本和 ZIP 压缩文件是项目备份的"双保险"**：
> - 文件夹版本：适合日常开发中的快速查看和恢复
> - ZIP 压缩文件：适合长期归档和跨设备传输
> - **两者缺一不可，压缩后绝对不能删除原始文件夹！**

---

> **版本备份是项目安全的重要保障，每次重大修改后应及时备份。备份文件是项目的"时光机"，可以在出现问题时快速回滚到稳定版本。**
